--- a/pages/vaudiopage/detailindex.wxss
+++ b/pages/vaudiopage/detailindex.wxss
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: #aaa;
+  color: rgb(5, 5, 5);
   font-size:14px;
   margin-top:10px;
 }
