--- a/pages/vaudiopage/explain.wxml
+++ b/pages/vaudiopage/explain.wxml
@@ -3,10 +3,10 @@
     讲解制作中... (๑•̀ㅂ•́)و
   </view>
   <view wx:else>
-    <view class='text-center' style='margin-top:20px;'>
+    <view wx:if="{{explainAudioUrl}}" class='text-center' style='margin-top:20px;'>
       <audio id="myAudio" name="讲解音频" author="{{explainer}}" src="{{explainAudioUrl}}" controls loop></audio>
     </view>
-    <view class='explain-panel'>
+    <view wx:if="{{lines}}" class='explain-panel'>
       <block wx:for="{{lines}}" wx:key="index">
         <view class='explain-line'>{{item}}</view>
       </block>
