--- a/pages/vaudiopage/index.wxss
+++ b/pages/vaudiopage/index.wxss
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: #aaa;
+  color: rgb(5, 5, 5);
   font-size:14px;
   margin-top:10px;
 }
@@ -18,13 +18,13 @@
   display: flex;
   flex-direction: column;
   color: #aaa;
-  font-size:12px;
+  font-size:14px;
   width:85%;
-  padding:0px 7%;
+  padding:0px 8%;
 }
 
 .learn-ctrl-bar{
-  margin:20px 30px 10px 30px;
+  margin:10px 30px 10px 30px;
   display: flex;
   justify-content: center;
   flex-direction: row;
@@ -32,7 +32,7 @@
 }
 
 .learn-ctrl-bar-2{
-  margin:20px 30px 10px 30px;
+  margin:10px 30px 10px 30px;
   display: flex;
   flex-direction: row;
 }
@@ -64,7 +64,7 @@
 
 .fanting-panel{
   margin:10px 0px 0px 30px;
-  height:280px;
+  height:270px;
   width:85%;
 }
 
